@@ -3,35 +3,36 @@ package com.axone_io.ignition.git.managers;
 import com.axone_io.ignition.git.SshTransportConfigCallback;
 import com.axone_io.ignition.git.records.GitProjectsConfigRecord;
 import com.axone_io.ignition.git.records.GitReposUsersRecord;
+import com.inductiveautomation.ignition.common.JsonUtilities;
 import com.inductiveautomation.ignition.common.gson.Gson;
 import com.inductiveautomation.ignition.common.gson.JsonElement;
 import com.inductiveautomation.ignition.common.gson.JsonObject;
-import com.inductiveautomation.ignition.common.gson.JsonPrimitive;
+import com.inductiveautomation.ignition.common.project.RuntimeProject;
+import com.inductiveautomation.ignition.common.project.resource.LastModification;
+import com.inductiveautomation.ignition.common.project.resource.ProjectResource;
+import com.inductiveautomation.ignition.common.project.resource.ResourcePath;
+import com.inductiveautomation.ignition.common.project.resource.ResourceType;
 import com.inductiveautomation.ignition.common.tags.TagUtilities;
 import com.inductiveautomation.ignition.common.tags.config.TagConfigurationModel;
 import com.inductiveautomation.ignition.common.tags.model.TagPath;
 import com.inductiveautomation.ignition.common.tags.model.TagProvider;
 import com.inductiveautomation.ignition.common.tags.paths.parser.TagPathParser;
 import com.inductiveautomation.ignition.common.util.DatasetBuilder;
+import com.inductiveautomation.ignition.common.util.LoggerEx;
 import com.inductiveautomation.ignition.gateway.images.ImageManager;
 import com.inductiveautomation.ignition.gateway.images.ImageRecord;
+import com.inductiveautomation.ignition.gateway.project.ProjectManager;
 import org.apache.commons.io.FileUtils;
 import org.eclipse.jgit.api.CommitCommand;
 import org.eclipse.jgit.api.Git;
-import org.eclipse.jgit.api.Status;
 import org.eclipse.jgit.api.TransportCommand;
 import org.eclipse.jgit.lib.StoredConfig;
 import org.eclipse.jgit.transport.UsernamePasswordCredentialsProvider;
-import org.slf4j.Logger;
-import org.slf4j.LoggerFactory;
 import simpleorm.dataset.SQuery;
 
-import java.io.File;
-import java.io.FileOutputStream;
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
@@ -39,64 +40,54 @@ import java.util.Set;
 import java.util.concurrent.CompletableFuture;
 
 import static com.axone_io.ignition.git.GatewayHook.context;
-import static com.inductiveautomation.ignition.common.tags.TagUtilities.TAG_GSON;
 
 public class GitManager {
-    private final static Logger logger = LoggerFactory.getLogger(GitManager.class);
+    private final static LoggerEx logger = LoggerEx.newBuilder().build(GitManager.class);
 
-    static public Git getGit(String projectName){
+    public static Git getGit(Path projectFolderPath) {
         Git git;
         try {
-            git = Git.open(new File(getProjectFolderPath(projectName) + ".git"));
-            StoredConfig config = git.getRepository().getConfig();
-            config.setBoolean( "http", null, "sslVerify", false );
-            config.save();
+            git = Git.open(projectFolderPath.resolve(".git").toFile());
+            disableSsl(git);
         } catch (IOException e) {
-            logger.error(e.toString(), e);
+            logger.error("Unable to retrieve Git repository", e);
             throw new RuntimeException(e);
         }
         return git;
     }
 
-    public static String getProjectFolderPath(String projectName){
-        return System.getProperty("user.dir") + "/data/projects/" + projectName + "/";
-    }
-
-    public static void clearDirectory(String folderPath){
+    public static void clearDirectory(Path folderPath) {
         try {
-            FileUtils.cleanDirectory(new File(folderPath));
+            FileUtils.cleanDirectory(folderPath.toFile());
         } catch (Exception e) {
             logger.error(e.toString(), e);
         }
     }
 
-    public static void exportTag(String projectName){
-        String projectFolderPath = getProjectFolderPath(projectName);
-        String tagFolderPath = projectFolderPath + "tags/";
-        clearDirectory(tagFolderPath);
+    public static void exportTag(Path projectFolderPath) {
+        Path tagFolderPath = projectFolderPath.resolve("tags");
+        if (tagFolderPath.toFile().exists()) {
+            clearDirectory(tagFolderPath);
+        }
 
         try {
-            Files.createDirectories(Paths.get(tagFolderPath));
+            Files.createDirectories(tagFolderPath);
 
-            for(TagProvider tagProvider: context.getTagManager().getTagProviders()){
+            for (TagProvider tagProvider : context.getTagManager().getTagProviders()) {
                 TagPath typesPath = TagPathParser.parse("");
                 List<TagPath> tagPaths = new ArrayList<>();
                 tagPaths.add(typesPath);
 
-                CompletableFuture<List<TagConfigurationModel>> cfTagModels = tagProvider.getTagConfigsAsync(tagPaths, true, true);
-                List<TagConfigurationModel> tModels =cfTagModels.get();
+                CompletableFuture<List<TagConfigurationModel>> cfTagModels =
+                        tagProvider.getTagConfigsAsync(tagPaths, true, true);
+                List<TagConfigurationModel> tModels = cfTagModels.get();
 
                 JsonObject json = TagUtilities.toJsonObject(tModels.get(0));
+                JsonElement sortedJson = JsonUtilities.createDeterministicCopy(json);
 
-                String ret = TAG_GSON.toJson(json);
-                File newFile = new File(tagFolderPath + tagProvider.getName() + ".json");
+                Path newFile = tagFolderPath.resolve(tagProvider.getName() + ".json");
 
-                try (FileOutputStream outputStream = new FileOutputStream(newFile)) {
-                    outputStream.write(ret.getBytes(StandardCharsets.UTF_8));
-                } catch (Exception e) {
-                    logger.error(e.toString(), e);
-                }
-
+                Files.writeString(newFile, sortedJson.toString());
             }
         } catch (Exception e) {
             logger.error(e.toString(), e);
@@ -104,84 +95,84 @@ public class GitManager {
         }
     }
 
-    public static void exportTheme(String projectName) {
-        String projectFolderPath = getProjectFolderPath(projectName);
-        String themeFolderPath = projectFolderPath + "themes/";
-        clearDirectory(themeFolderPath);
-        Gson g = new Gson();
-
-
-        String content;
-        String theme = "light";
+    public static void exportTheme(Path projectFolderPath) {
+        Path themeFolderPath = projectFolderPath.resolve("themes");
+        if (themeFolderPath.toFile().exists()) {
+            clearDirectory(themeFolderPath);
+        }
         try {
-            Files.createDirectories(Paths.get(themeFolderPath));
-            content = new String(Files.readAllBytes(Paths.get(projectFolderPath + "com.inductiveautomation.perspective/session-props/props.json")));
-            JsonObject json = (JsonObject) g.fromJson(content, JsonElement.class);
-            JsonObject props = json.getAsJsonObject("props");
-            if (props.has("theme")){
-                theme = props.getAsJsonPrimitive("theme").getAsString();
+            Path perspectiveFolderPath = projectFolderPath.resolve("com.inductiveautomation.perspective");
+
+            if (perspectiveFolderPath.toFile().exists()) {
+                Path sessionPropsPath = perspectiveFolderPath
+                        .resolve("session-props")
+                        .resolve("props.json");
+                String content = Files.readString(sessionPropsPath);
+                Gson g = new Gson();
+                JsonObject json = g.fromJson(content, JsonObject.class);
+                String theme = JsonUtilities.readString(json, "props.theme", "light");
+
+                Path themesDir = context.getSystemManager().getDataDir().toPath()
+                        .resolve("modules")
+                        .resolve("com.inductiveautomation.perspective")
+                        .resolve("themes");
+
+                Path themeFolder = themesDir.resolve(theme);
+                Path themeFile = themesDir.resolve(theme + ".css");
+
+                Files.createDirectories(themeFolderPath);
+                FileUtils.copyDirectoryToDirectory(themeFolder.toFile(), themeFolderPath.toFile());
+                Files.copy(themeFile, themeFolderPath.resolve(themeFile.getFileName()));
             }
-
-
-            String dataFolderPath = System.getProperty("user.dir") + "/data";
-            String themePathFolder = dataFolderPath + "/modules/com.inductiveautomation.perspective/themes/" + theme +"/";
-            String themePathFile = dataFolderPath + "/modules/com.inductiveautomation.perspective/themes/" + theme +".css";
-
-            File destDir = new File(themeFolderPath);
-
-            FileUtils.copyDirectoryToDirectory(new File(themePathFolder), destDir);
-            FileUtils.copyFile(new File(themePathFile), new File(themeFolderPath + theme + ".css"));
-
         } catch (IOException e) {
             logger.error(e.toString(), e);
         }
     }
 
-    public static void exportImages(String projectName) {
-        String projectFolderPath = getProjectFolderPath(projectName);
+    public static void exportImages(Path projectFolderPath) {
+        Path imageFolderPath = projectFolderPath.resolve("images");
+        if (imageFolderPath.toFile().exists()) {
+            clearDirectory(imageFolderPath);
+        }
 
-        String imageFolderPath = projectFolderPath + "images/";
-        clearDirectory(imageFolderPath);
         try {
-            Files.createDirectories(Paths.get(imageFolderPath));
+            Files.createDirectories(imageFolderPath);
         } catch (IOException e) {
             logger.error(e.toString(), e);
         }
-        saveFolderImage(imageFolderPath,"");
+        saveFolderImage(imageFolderPath, "");
     }
 
-    public static void saveFolderImage(String folderPath, String directory){
+    public static void saveFolderImage(Path folderPath, String directory) {
         ImageManager imageManager = context.getImageManager();
-        for(ImageRecord imageRecord: imageManager.getImages(directory)){
+        for (ImageRecord imageRecord : imageManager.getImages(directory)) {
             String path = imageRecord.getString(ImageRecord.Path);
-            if(imageRecord.isDirectory()){
+            if (imageRecord.isDirectory()) {
                 try {
-                    Files.createDirectories(Paths.get(folderPath + path));
+                    Files.createDirectories(folderPath.resolve(path));
                 } catch (IOException e) {
                     logger.error(e.toString(), e);
                 }
-
-                saveFolderImage(folderPath,path);
-            }else{
+                saveFolderImage(folderPath, path);
+            } else {
                 byte[] data = imageManager.getImage(path).getBytes(ImageRecord.Data);
-                File newFile = new File(folderPath + path);
-
-                try (FileOutputStream outputStream = new FileOutputStream(newFile)) {
-                    outputStream.write(data);
-                } catch (Exception e) {
+                try {
+                    Files.write(folderPath.resolve(path), data);
+                } catch (IOException e) {
                     logger.error(e.toString(), e);
                 }
             }
         }
     }
 
-    public static void setAuthentication(TransportCommand command, String projectName, String userName) throws Exception {
+    public static void setAuthentication(TransportCommand<?, ?> command, String projectName, String userName)
+            throws Exception {
         GitProjectsConfigRecord gitProjectsConfigRecord = getGitProjectConfigRecord(projectName);
         GitReposUsersRecord user = getGitReposUserRecord(gitProjectsConfigRecord, userName);
 
-        if (gitProjectsConfigRecord.isSSHAuthentication()){
+        if (gitProjectsConfigRecord.isSSHAuthentication()) {
             command.setTransportConfigCallback(getSshTransportConfigCallback(user));
-        }else {
+        } else {
             command.setCredentialsProvider(getUsernamePasswordCredentialsProvider(user));
         }
     }
@@ -198,19 +189,27 @@ public class GitManager {
     }
 
     public static GitProjectsConfigRecord getGitProjectConfigRecord(String projectName) throws Exception {
-        SQuery<GitProjectsConfigRecord> projectQuery = new SQuery<>(GitProjectsConfigRecord.META).eq(GitProjectsConfigRecord.ProjectName, projectName);
+        SQuery<GitProjectsConfigRecord> projectQuery = new SQuery<>(GitProjectsConfigRecord.META)
+                .eq(GitProjectsConfigRecord.ProjectName, projectName);
         GitProjectsConfigRecord gitProjectsConfigRecord = context.getPersistenceInterface().queryOne(projectQuery);
 
-        if (gitProjectsConfigRecord == null) throw new Exception("Git Project not configured.");
+        if (gitProjectsConfigRecord == null) {
+            throw new Exception("Git Project not configured.");
+        }
 
         return gitProjectsConfigRecord;
     }
 
-    public static GitReposUsersRecord getGitReposUserRecord(GitProjectsConfigRecord gitProjectsConfigRecord, String userName) throws Exception {
-        SQuery<GitReposUsersRecord> userQuery = new SQuery<>(GitReposUsersRecord.META).eq(GitReposUsersRecord.ProjectId, gitProjectsConfigRecord.getId()).eq(GitReposUsersRecord.IgnitionUser, userName);
+    public static GitReposUsersRecord getGitReposUserRecord(GitProjectsConfigRecord gitProjectsConfigRecord,
+                                                            String userName) throws Exception {
+        SQuery<GitReposUsersRecord> userQuery = new SQuery<>(GitReposUsersRecord.META)
+                .eq(GitReposUsersRecord.ProjectId, gitProjectsConfigRecord.getId())
+                .eq(GitReposUsersRecord.IgnitionUser, userName);
         GitReposUsersRecord user = context.getPersistenceInterface().queryOne(userQuery);
 
-        if (user == null) throw new Exception("Git User not configured.");
+        if (user == null) {
+            throw new Exception("Git User not configured.");
+        }
 
         return user;
     }
@@ -222,64 +221,72 @@ public class GitManager {
     public static SshTransportConfigCallback getSshTransportConfigCallback(GitReposUsersRecord user) {
         return new SshTransportConfigCallback(user.getSSHKey());
     }
-    public static void uncomittedChangesBuilder(String projectPath, Set<String> updates, String type, List<String> changes, DatasetBuilder builder){
-        for (String update: updates) {
-            String[] rowData = new String[3];
 
+    public static void uncommittedChangesBuilder(String projectName,
+                                                 Set<String> updates,
+                                                 String type,
+                                                 List<String> changes,
+                                                 DatasetBuilder builder) throws IOException {
+        for (String update : updates) {
+            String[] rowData = new String[3];
+            String actor = "unknown";
             String path = update;
-            if (hasActor(path)){
+            if (hasActor(path)) {
                 String[] pathSplitted = update.split("/");
-                path = String.join("/", Arrays.copyOf(pathSplitted,pathSplitted.length -1));
+                path = String.join("/", Arrays.copyOf(pathSplitted, pathSplitted.length - 1));
+                actor = getActor(projectName, path);
             }
 
             rowData[0] = path;
             rowData[1] = type;
-            if(!changes.contains(path)){
-                rowData[2] = getActor(projectPath + path);
+            if (!changes.contains(path)) {
+                rowData[2] = actor;
                 changes.add(path);
-                builder.addRow(rowData);
+                builder.addRow((Object[]) rowData);
             }
         }
     }
 
-    public static boolean hasActor(String resource){
+    public static boolean hasActor(String resource) {
         boolean hasActor = false;
-        if (resource.startsWith("ignition")) hasActor = Boolean.TRUE;
-        if (resource.startsWith("com.inductiveautomation.")) hasActor = Boolean.TRUE;
+        if (resource.startsWith("ignition")) {
+            hasActor = Boolean.TRUE;
+        }
+        if (resource.startsWith("com.inductiveautomation.")) {
+            hasActor = Boolean.TRUE;
+        }
 
         return hasActor;
     }
 
-    public static String getActor(String path){
-        Gson g = new Gson();
-        String actor = "";
-        try {
-            String content = new String(Files.readAllBytes(Paths.get(path + "/resource.json")));
+    public static String getActor(String projectName, String path) {
+        ProjectManager projectManager = context.getProjectManager();
+        RuntimeProject project = projectManager.getProject(projectName).get();
 
-            JsonObject j = (JsonObject) g.fromJson(content, JsonElement.class);
+        ProjectResource projectResource = project.getResource(getResourcePath(path)).get();
+        String actor = LastModification.of(projectResource).map(LastModification::getActor).orElse("unknown");
+        ;
 
-            JsonObject a = j.getAsJsonObject("attributes");
-            JsonObject b = a.getAsJsonObject("lastModification");
-            JsonPrimitive c = b.getAsJsonPrimitive("actor");
-
-            actor = c.getAsString();
-        } catch (Exception e) {
-            logger.trace(e.toString(), e);
-        }
         return actor;
     }
-    public static  List getAddedFiles(String projectName) {
-        List<String> fileList = new ArrayList<>();
-        Git git = getGit(projectName);
-        try {
-            Status status = git.status().call();
-            fileList.addAll(status.getAdded());
-            git.close();
-        } catch (Exception e) {
-            logger.info(e.toString(), e);
-            throw new RuntimeException(e);
-        }
-        return fileList;
+
+
+    public static ResourcePath getResourcePath(String resourcePath) {
+        String moduleId = "";
+        String typeId = "";
+        String resource = "";
+        String[] paths = resourcePath.split("/");
+
+        if (paths.length > 0) moduleId = paths[0];
+        if (paths.length > 1) typeId = paths[1];
+        if (paths.length > 2) resource = resourcePath.replace(moduleId + "/" + typeId + "/", "");
+
+        return new ResourcePath(new ResourceType(moduleId, typeId), resource);
     }
 
+    public static void disableSsl(Git git) throws IOException {
+        StoredConfig config = git.getRepository().getConfig();
+        config.setBoolean("http", null, "sslVerify", false);
+        config.save();
+    }
 }
